--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,14 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-*.toc
+**.jar
+**.war
+**.nar
+**.ear
+**.zip
+**.tar.gz
+**.rar
+**.toc
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
